--- a/MARTINEZJONES.styles.css
+++ b/MARTINEZJONES.styles.css
@@ -182,26 +182,27 @@ section{
 }
 
 /* ---------- EXTRA SMALL SCREEN STYLES ---------- */
-header, footer{
-    background-color: var(--pink);
-    color: var(--white);
-}
+@media (max-width: 595px) {
+    header, footer{
+        background-color: var(--pink);
+        color: var(--white);
+    }
 
-section{
-    background-color: var(--red);
-    color: var(--light-gray);
-}
+    section{
+        background-color: var(--red);
+        color: var(--light-gray);
+    }
 
-img{
-    margin: 0.75em 0.75em 0.75em 0;
-    display: inline;
-    float: left;
+    img{
+        margin: 0.75em 0.75em 0.75em 0;
+        display: inline;
+        float: left;
+    }
 }
-
 
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-@media (min-width: 480px) {
+@media (min-width: 596px) {
     header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
@@ -309,17 +310,27 @@ img{
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-    /* img{
+@media (min-width: 1380px) {
+    img{
         width: 300px;
         max-width: 300px;
-    } */
+    }
+}
+
+@media (max-width: 1380px) and (min-width: 620px) {
+    img{
+        width: 200px;
+        max-width: 200px;
+    }
+}
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
 
 
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+@media (min-width: 1500px) {
+    header, footer{
         background-color: var(--orange);
         padding-left: 5%;
     }
@@ -384,5 +395,6 @@ img{
 
     #three p, #four p, #five p, #six p{
         padding-top: 2em;
-    } */
+    }
+}
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
